kuber/01/04/src/task2/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    labels:
        app: backend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: multitool
                  image: wbitt/network-multitool:latest
                  ports:
                      - containerPort: 8080
