kuber/01/04/src/task2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend-svc
spec:
    selector:
        app: backend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
    type: ClusterIP
