kuber/01/04/src/task2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
spec:
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
